<resources>
    <string name="app_name">Senior Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abdulsalam Alsumaini</string>
    <string name="nav_header_subtitle">aa1512231@qu.edu.qa</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_msg">Massages</string>
    <string name="menu_account">Account</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_professor_home_page">ProfessorHomePage</string>
    <string name="menu_gallery">Chatting</string>
    <string name="menu_slideshow">Account</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Navigation</string>
    <string name="try_again">Try again</string>
    <string name="location_not_deter">Location not deter</string>
    <string name="action_fav_navi">Favourite navigation</string>


</resources>
