<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_pro"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:icon="@drawable/ic_msg"
            android:id="@+id/nav_msg_pro"
            android:title="@string/menu_msg" />

        <item
            android:id="@+id/nav_account_pro"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_signout_pro"
            android:icon="@drawable/ic_signout"
            android:title="@string/menu_sign_out" />
    </group>




</menu>
