<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_pro">

    <fragment
        android:id="@+id/nav_home_pro"
        android:name="qu.edu.qa.seniorproject.student.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_msg_pro"
        android:name="qu.edu.qa.seniorproject.professor.MassagesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_account_pro"
        android:name="qu.edu.qa.seniorproject.professor.AccountProfessorFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_signout_pro"
        android:name="qu.edu.qa.seniorproject.student.HomeFragment"
        />



</navigation>